FIX: Align social icons left [619]

--- a/common/common.scss
+++ b/common/common.scss
@@ -579,7 +579,7 @@ body[class*="archetype-"]{
           width: 219px;
           font-size: 12px;
           float: left;
-          text-align: center;
+          text-align: left;
 
           .footer-links{
               svg{
